--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Site</title>
+  <title>Perguntas EBD</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Bem-vindo ao meu site!</h1>
-  <p>Este é um exemplo simples.</p>
+  <header>
+    <h1>Perguntas e Respostas EBD</h1>
+    <nav>
+      <ul>
+        <li><a href="#perguntas">Perguntas</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <section id="perguntas">
+    <h2>Perguntas Frequentes</h2>
+    <div class="pergunta">
+      <h3>O que é a Escola Bíblica Dominical?</h3>
+      <p>A Escola Bíblica Dominical (EBD) é uma atividade religiosa voltada ao estudo da Bíblia.</p>
+    </div>
+    <div class="pergunta">
+      <h3>Qual a importância de estudar a Bíblia?</h3>
+      <p>Estudar a Bíblia é fundamental para entender os princípios cristãos e aplicá-los na vida diária.</p>
+    </div>
+  </section>
+
+  <footer>
+    <h2 id="contato">Contato</h2>
+    <p>Email: contato@perguntasebd.com.br</p>
+  </footer>
 </body>
 </html>
